--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
                 <!-- Price arae -->
                 <div class="border-t border-dashed">
                   <!-- Total Price -->
-                  <div class="flex items-center justify-between pt-4">
+                  <div class="flex items-center justify-between py-4">
                     <h4 class="font-sans text-xl font-semibold">Total Price</h4>
                     <h4 class="font-sans text-xl font-semibold">
                       BDT <span id="total-price">0</span>
@@ -731,7 +731,10 @@
                   </div>
 
                   <!-- Coupon apply -->
-                  <div class="flex my-6 bg-white rounded-xl">
+                  <div
+                    id="coupon_input_container"
+                    class="flex bg-white rounded-xl"
+                  >
                     <input
                       id="input_coupon"
                       type="text"
@@ -747,7 +750,9 @@
                   </div>
 
                   <!-- Grand Total -->
-                  <div class="flex items-center justify-between">
+                  <div
+                    class="flex items-center justify-between pt-4 my-4 border-t border-dashed"
+                  >
                     <h4 class="font-sans text-xl font-semibold">Grand Total</h4>
                     <h4 class="font-sans text-xl font-semibold">
                       BDT <span id="grand-total">0</span>
@@ -768,6 +773,7 @@
                       type="text"
                       placeholder="Enter your name"
                       class="p-4 mt-4 mb-8 border rounded-lg outline-none"
+                      required
                     />
                   </div>
                   <div class="flex flex-col">
@@ -791,16 +797,52 @@
                       type="email"
                       placeholder="Enter your email id"
                       class="p-4 mt-4 mb-8 border rounded-lg outline-none"
+                      required
                     />
                   </div>
-
+                </form>
+                <div>
                   <button
-                    id="submit"
-                    class="w-full py-4 bg-[#1DD100] rounded-lg text-xl text-white font-semibold"
+                    id="submit-btn"
+                    class="w-full py-4 bg-[#1DD100] rounded-lg text-xl text-white font-semibold outline-none"
+                    onclick="my_modal_1.showModal()"
                   >
                     Next
                   </button>
-                </form>
+
+                  <dialog id="my_modal_1" class="modal">
+                    <div
+                      class="flex flex-col items-center justify-center p-12 modal-box"
+                    >
+                      <img src="./images/success.png" alt="success" />
+                      <h4 class="text-2xl text-[#27AE60] font-semibold my-8">
+                        SUCCESS
+                      </h4>
+                      <h3
+                        class="text-xl text-[#4A4A4A] text-center font-semibold"
+                      >
+                        Thank you for Booking Our Bus Seats. We are working hard
+                        to find the best service and deals for you.
+                      </h3>
+
+                      <p
+                        class="text-xl font-medium text-[#4A4A4A] text-center my-5"
+                      >
+                        Shortly you will find a confirmation in your email.
+                      </p>
+
+                      <div class="modal-action">
+                        <form method="dialog">
+                          <button
+                            class="px-12 py-4 rounded-full bg-[#27AE60] text-xl text-white"
+                          >
+                            Continue
+                          </button>
+                        </form>
+                      </div>
+                    </div>
+                  </dialog>
+                </div>
 
                 <div class="flex items-center my-8 justify-evenly">
                   <p class="text-lg font-medium underline">
@@ -850,7 +892,6 @@
       </div>
     </footer>
 
-    <script src="./scripts/utility.js"></script>
     <script src="./scripts/app.js"></script>
   </body>
 </html>
