--- a/index.html
+++ b/index.html
@@ -764,6 +764,9 @@
               <!-- Passenger Information -->
               <div class="p-8">
                 <form>
+                  <p class="mb-2 font-semibold text-red-500">
+                    Name, Number And Email Is Required To Submit
+                  </p>
                   <div class="flex flex-col">
                     <label for="name" class="text-[#030712] font-semibold"
                       >Passenger Name*</label
